workspace/compiler/languages/tests/go/snapshots/go_snapshot__go_basics_ir.snap
---
source: workspace/compiler/languages/tests/go/snapshot.rs
assertion_line: 948
expression: rows
---
[
    EntryRow {
        kind: "Alias",
        name: "Temperature",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Const",
        name: "MaxRetries",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Const",
        name: "defaultTimeout",
        visibility: "Package",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Enum",
        name: "Direction",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 4,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "(inner)",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "(inner)",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "(inner)",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "(inner)",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "(inner)",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "Addr",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "Name",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "Port",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "Server",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "timeout",
        visibility: "Package",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Function",
        name: "Close",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Close",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Process",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 4,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Status",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "Owned",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Status",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "Owned",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Variadic",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "namedReturn",
        visibility: "Package",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Module",
        name: "(root)",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Module",
        name: "example.com/basics",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 15,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Celsius",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Chan",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Config",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 4,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Ptr",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Server",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 5,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "StringMap",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "StringSlice",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Static",
        name: "Count",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Variant",
        name: "East",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Variant",
        name: "North",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Variant",
        name: "South",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Variant",
        name: "West",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
]
