workspace/compiler/languages/tests/go/snapshots/go_snapshot__go_interfaces_ir.snap
---
source: workspace/compiler/languages/tests/go/snapshot.rs
assertion_line: 958
expression: rows
---
[
    EntryRow {
        kind: "Field",
        name: "(inner)",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "items",
        visibility: "Package",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Function",
        name: "Add",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Close",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Close",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Get",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Len",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Pop",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 2,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Push",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Read",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Read",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Read",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Transform",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 2,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Write",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Write",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Write",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "unexportedHelper",
        visibility: "Package",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Module",
        name: "(root)",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Module",
        name: "example.com/interfaces",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 11,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Map",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 2,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Stack",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 1,
        alias_count: 0,
        child_count: 3,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "Closer",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "Container",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 1,
        alias_count: 0,
        child_count: 3,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "Ordered",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "ReadWriteCloser",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "ReadWriter",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "Reader",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
    EntryRow {
        kind: "Trait",
        name: "Writer",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: None,
    },
]
