workspace/compiler/languages/tests/go/snapshots/go_snapshot__go_multipackage_ir.snap
---
source: workspace/compiler/languages/tests/go/snapshot.rs
assertion_line: 968
expression: rows
---
[
    EntryRow {
        kind: "Field",
        name: "Name",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Field",
        name: "entries",
        visibility: "Package",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 0,
        receiver: None,
    },
    EntryRow {
        kind: "Function",
        name: "Describe",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "Owned",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Get",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 3,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "New",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "NewRegistry",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 1,
        receiver: Some(
            "None",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Run",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 1,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Function",
        name: "Set",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 4,
        child_count: 2,
        receiver: Some(
            "MutRef",
        ),
    },
    EntryRow {
        kind: "Module",
        name: "(root)",
        visibility: "Public",
        doc_present: false,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: None,
    },
    EntryRow {
        kind: "Module",
        name: "example.com/multipackage",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: None,
    },
    EntryRow {
        kind: "Module",
        name: "example.com/multipackage/sub",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 2,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Helper",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: None,
    },
    EntryRow {
        kind: "Record",
        name: "Registry",
        visibility: "Public",
        doc_present: true,
        deprecation_present: false,
        generic_count: 0,
        alias_count: 0,
        child_count: 3,
        receiver: None,
    },
]
